fixed spacing

--- a/src/stylesheets/partials/_profile.scss
+++ b/src/stylesheets/partials/_profile.scss
@@ -30,7 +30,7 @@
 
 .profile--info-area__info {
   flex: 1;
-  padding: 5px 15px;
+  padding: 5px 30px;
 
   h3 {
     margin-bottom: 16px;
